force-app/main/default/objects/Contact_associ_s_l_opportunit__c/Contact_associ_s_l_opportunit__c.object-meta.xml
<CustomObject>
    <description>Contient l&apos;ensemble des contacts en lien avec l&apos;opportunité ayant un rôle secondaire.</description>
    <label>Rôle sur opportunité</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Numéro de lien contact opportunité</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rôles sur opportunité</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>