force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/A_remercier__c.field-meta.xml
<CustomField>
    <fullName>A_remercier__c</fullName>
    <defaultValue>true</defaultValue>
    <label>A remercier</label>
    <type>Checkbox</type>
</CustomField>