force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/Formule_format_mapping__c.field-meta.xml
<CustomField>
    <fullName>Formule_format_mapping__c</fullName>
    <formula>UPPER(Contact__r.LastName)
&amp;&quot;, &quot;&amp;

UPPER(LEFT( Contact__r.FirstName ,1))&amp;LOWER(Mid(Contact__r.FirstName, 2, Len(Contact__r.FirstName)-1))</formula>
    <label>Formule format mapping</label>
    <type>Text</type>
</CustomField>