force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/ID_du_contact__c.field-meta.xml
<CustomField>
    <fullName>ID_du_contact__c</fullName>
    <formula>Contact__r.Id</formula>
    <label>ID du contact</label>
    <type>Text</type>
</CustomField>