force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/Opportunit__c.field-meta.xml
<CustomField>
    <fullName>Opportunit__c</fullName>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Contacts_associ_s_l_opportunit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>