force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/Role_sur_l_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Role_sur_l_opportunite__c</fullName>
    <label>Role sur l&apos;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Responsable légal</fullName>
            </value>
            <value>
                <fullName>Prescripteur agent</fullName>
            </value>
            <value>
                <fullName>Prescripteur coopteur</fullName>
            </value>
            <value>
                <fullName>Prescripteur décideur</fullName>
            </value>
            <value>
                <fullName>Prescripteur gestionnaire RH</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Agent recruteur</fullName>
            </value>
            <value>
                <fullName>Cooptation via diplomés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>