force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/Role_sur_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Role_sur_opportunite__c</fullName>
    <label>Role sur l&apos;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Responsable légal</fullName>
            </value>
            <value>
                <fullName>Prescripteur agent</fullName>
            </value>
            <value>
                <fullName>Prescripteur coopteur</fullName>
            </value>
            <value>
                <fullName>Prescripteur décideur</fullName>
            </value>
            <value>
                <fullName>Prescripteur gestionnaire RH</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Agent recruteur</fullName>
            </value>
            <value>
                <fullName>Cooptation via diplomés</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Ambassadeur</fullName>
            </value>
            <value>
                <fullName>Porteur</fullName>
            </value>
            <value>
                <fullName>Relai entreprise</fullName>
            </value>
            <value>
                <fullName>Contact principal</fullName>
            </value>
            <value>
                <fullName>Interlocuteur TAXE</fullName>
            </value>
            <value>
                <fullName>Gestionnaire</fullName>
            </value>
            <value>
                <fullName>TAXEVIP</fullName>
            </value>
            <value>
                <fullName>TAXEPRI</fullName>
            </value>
            <value>
                <fullName>TAXEGEST</fullName>
            </value>
            <value>
                <fullName>TAXEPRES</fullName>
            </value>
            <value>
                <fullName>Prescripteur achat</fullName>
            </value>
            <value>
                <fullName>Prescripteur</fullName>
            </value>
            <value>
                <fullName>TAXEPROC</fullName>
            </value>
            <value>
                <fullName>Responsable pédagogique</fullName>
            </value>
            <value>
                <fullName>Contact secondaire</fullName>
            </value>
            <value>
                <fullName>Chef de Projet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>