force-app/main/default/objects/Contact_associ_s_l_opportunit__c/fields/x18caracteres__c.field-meta.xml
<CustomField>
    <fullName>x18caracteres__c</fullName>
    <formula>CASESAFEID(ID_du_contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x18caracteres</label>
    <type>Text</type>
</CustomField>