force-app/main/default/objects/Contact_associ_s_l_opportunit__c/recordTypes/FC_Programme_Long.recordType-meta.xml
<RecordType>
    <fullName>FC_Programme_Long</fullName>
    <active>true</active>
    <label>FC Programme Long</label>
</RecordType>