force-app/main/default/objects/Contact_associ_s_l_opportunit__c/recordTypes/FC_Sur_Mesure.recordType-meta.xml
<RecordType>
    <fullName>FC_Sur_Mesure</fullName>
    <active>true</active>
    <label>FC Sur-Mesure</label>
</RecordType>