force-app/main/default/objects/Contact_associ_s_l_opportunit__c/recordTypes/Formation_courte.recordType-meta.xml
<RecordType>
    <fullName>Formation_courte</fullName>
    <active>true</active>
    <label>Formation courte</label>
</RecordType>