force-app/main/default/objects/Contact_associ_s_l_opportunit__c/recordTypes/Formation_initiale.recordType-meta.xml
<RecordType>
    <fullName>Formation_initiale</fullName>
    <active>true</active>
    <label>Formation initiale</label>
</RecordType>