force-app/main/default/objects/Contact_associ_s_l_opportunit__c/recordTypes/Taxe.recordType-meta.xml
<RecordType>
    <fullName>Taxe</fullName>
    <active>true</active>
    <label>Taxe</label>
</RecordType>